RESOLVED FIXED287189
command IDL property reflects invalid values
https://bugs.webkit.org/show_bug.cgi?id=287189
Summary command IDL property reflects invalid values
Luke Warlow
Reported 2025-02-06 14:32:48 PST
The command IDL property should only reflect known or custom values, invalid values should return an empty string. Currently it uses simple reflection, this bug tracks fixing that.
Attachments
Luke Warlow
Comment 1 2025-02-06 14:39:23 PST
Radar WebKit Bug Importer
Comment 2 2025-02-13 14:33:15 PST
EWS
Comment 3 2025-03-11 10:17:14 PDT
Committed 291954@main (72347c4a2ac0): <https://commits.webkit.org/291954@main> Reviewed commits have been landed. Closing PR #40154 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.