command IDL property reflects invalid values https://bugs.webkit.org/show_bug.cgi?id=287189

Reviewed by Darin Adler.

Swaps the command IDL property to use manual reflection rather than
the Reflect IDL extended attribute.

Invalid values are now correctly reflected as an empty string.

* LayoutTests/imported/w3c/web-platform-tests/html/semantics/the-button-element/command-and-commandfor/command-reflection.tentative-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/the-button-element/command-and-commandfor/interface.tentative-expected.txt:
* Source/WebCore/html/HTMLButtonElement.cpp:
(WebCore::togglePopoverAtom):
(WebCore::showPopoverAtom):
(WebCore::hidePopoverAtom):
(WebCore::closeAtom):
(WebCore::showModalAtom):
(WebCore::HTMLButtonElement::commandType const):
(WebCore::HTMLButtonElement::command const):
(WebCore::HTMLButtonElement::setCommand):
* Source/WebCore/html/HTMLButtonElement.h:
* Source/WebCore/html/HTMLButtonElement.idl:

Canonical link: https://commits.webkit.org/291954@main